--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -143,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Song name"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textColor"
                     android:textSize="20dp"
                     android:shadowColor="@color/black"/>
 
@@ -158,7 +158,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Длительность: "
-                        android:textColor="@color/white"
+                        android:textColor="@color/textColor"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:text="0:00"
                         android:textStyle="bold"
-                        android:textColor="@color/white"
+                        android:textColor="@color/textColor"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -187,7 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="      Прочитано: "
-                        android:textColor="@color/white"
+                        android:textColor="@color/textColor"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -199,7 +199,7 @@
                         android:layout_height="wrap_content"
                         android:text="0:00"
                         android:textStyle="bold"
-                        android:textColor="@color/white"
+                        android:textColor="@color/textColor"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
