--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main"
-    tools:context=".ActivityBooks">
+    tools:context=".activities.activity_books.ActivityBooks">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
