--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main"
-    tools:context=".MainActivity">
+    tools:context=".activities.PlayTrackActivity">
 
     <LinearLayout
         android:id="@+id/full"
@@ -95,7 +95,7 @@
                     android:shadowColor="@color/black"/>
 
                 <TextView
-                    android:id="@+id/readed_teme"
+                    android:id="@+id/readed_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0:00"
