--- a/app/src/main/res/layout/sidbar_menu.xml
+++ b/app/src/main/res/layout/sidbar_menu.xml
@@ -56,6 +56,8 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:scaleY="1.3"
+                android:scaleX="1.3"
                 android:src="@drawable/icon_books"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="20dp"
