--- a/app/src/main/res/layout/toolbar_library.xml
+++ b/app/src/main/res/layout/toolbar_library.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:background="@color/background_toolbar"
-    tools:context=".ActivityBooks">
+    tools:context=".activities.activity_books.ActivityBooks">
 
 <LinearLayout
     android:layout_width="match_parent"
