--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="textColor">#000000</color>
     <color name="toolbarLibrary">#e5e5e3</color>
     <color name="settingsCheck">#B8B8B8</color>
+    <color name="bookmarkTitle">#505050</color>
 </resources>
