--- a/app/src/main/res/layout-land/activity_play_track.xml
+++ b/app/src/main/res/layout-land/activity_play_track.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PlayTrackActivity">
+    tools:context=".activities.play_track_activity.PlayTrackActivity">
 
     <!-- Основной контент -->
 
@@ -26,10 +26,20 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:background="@color/background_main">
                 <include layout="@layout/activity_song" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@color/background_main"
+                    android:layout_weight="1">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/tracks"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </LinearLayout>
             </LinearLayout>
-
 
             <RelativeLayout
                 android:layout_width="0dp"
