--- a/app/src/main/res/layout/activity_play_track.xml
+++ b/app/src/main/res/layout/activity_play_track.xml
@@ -6,14 +6,14 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PlayTrackActivity">
+    tools:context=".activities.play_track_activity.PlayTrackActivity">
 
     <!-- Main content -->
 
     <LinearLayout
         android:id="@+id/main_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/background_main"
         android:orientation="vertical"
         android:gravity="center_horizontal">
@@ -27,18 +27,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="0dp"
             android:background="@color/background_main"
-            android:layout_weight="400">
-            <ListView
-                android:id="@+id/countriesList"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-            </ListView>
+            android:layout_weight="1">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tracks"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
         <RelativeLayout
