--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main"
-    tools:context=".activities.PlayTrackActivity">
+    tools:context=".activities.play_track_activity.PlayTrackActivity">
 
     <LinearLayout
         android:id="@+id/full"
@@ -37,7 +37,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="180dp"
                 android:contentDescription="todo"
                 android:src="@drawable/carplay_book"
                 android:layout_margin="10dp"
